--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Quebec wall art</title>
+    <title>QuebecCity wall art</title>
     <!-- 
 
 Highway Template
@@ -11,7 +11,7 @@ Highway Template
 https://templatemo.com/tm-520-highway
 
 -->
-    <meta name="description" content="Quebec city wall art" />
+    <meta name="description" content="Quebec city wall art and graffiti" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
@@ -32,7 +32,7 @@ https://templatemo.com/tm-520-highway
   <body>
     <nav>
       <div class="logo">
-        <a href="index.html">Quebec City <em>open air art gallery</em></a>
+        <a href="index.html">Quebec City <em></em></a>
       </div>
       <!-- <div class="menu-icon">
         <span></span>
@@ -43,7 +43,7 @@ https://templatemo.com/tm-520-highway
       <div class="video-overlay"></div>
       <div class="video-content">
         <div class="inner">
-          <h1>Quebec City<em>open air art gallery</em></h1>
+          <h1><em>open air art gallery</em></h1>
           <p>hand-picked graffiti and wall art from Quebec City, Canada</p>
           <div class="scroll-icon">
             <a class="scrollTo" data-scrollTo="portfolio" href="#"
