adding github repo link to footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ https://templatemo.com/tm-520-highway
   <meta property="twitter:title" content="Quebec City open air art gallery">
   <meta property="twitter:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
-  <meta property="twitter:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/wolfe-limoilou-8e.jpg">
+  <meta property="twitter:image"
+    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/wolfe-limoilou-8e.jpg">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
@@ -389,8 +390,11 @@ https://templatemo.com/tm-520-highway
   <footer>
     <div class="container-fluid">
       <div class="col-md-12">
-        <p>
-          Copyright &copy; 2021 freshdatasource.com | Designed by TemplateMo
+        <p><a className="" title="https://github.com/socraticDevBlog/quebecy-city-wall-art" href="https://github.com/socraticDevBlog/quebecy-city-wall-art"
+            rel="noopener noreferrer" target="_blank" alt="lien vers ma page github">
+            <img src="img/github.png" alt="github logo" class="social-icon"></img> source code
+          </a>
+           | Designed by TemplateMo
         </p>
       </div>
     </div>
