--- a/index.html
+++ b/index.html
@@ -78,6 +78,160 @@ https://templatemo.com/tm-520-highway
   </div>
   <div class="full-screen-portfolio" id="portfolio">
     <div class="container-fluid">
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/parc-victoria-stade-3.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>le Taz<em>respect!</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/parc-victoria-stade-3.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/parc-victoria-stade-1.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>busted<em>ghosts</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/parc-victoria-stade-1.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/parc-victoria-stade-2.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>more<em>monsters</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/parc-victoria-stade-2.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/hlm-1.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>hlm<em>murale numéro 1</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/hlm-1.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/hlm-2.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>hlm<em>murale numéro 2</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/hlm-2.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/hlm-3.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>hlm<em>murale numéro 3</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/hlm-3.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/tiki-saint-vallier.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>tiki<em>Saint-Vallier</em></h1>
+                  <p>Pacific neighborhood</p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/tiki-saint-vallier.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/saint-sauveur-nature.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>Saint-Sauveur<em>nature</em></h1>
+                  <p>wilderness right at the corner</p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/saint-sauveur-nature.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/pente-douce-salome.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>pente-douce <em>Salomé</em></h1>
+                  <p>gate keeper</p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/pente-douce-salome.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
       <div class="col-md-4 col-sm-6">
         <div class="portfolio-item">
           <a href="img-wall-art-qc-city/astro-garage.jpg" data-lightbox="image-1">
