meta social default img changed to weird salome

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-520-highway
   <meta property="og:title" content="Quebec City open air art gallery">
   <meta property="og:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
-  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/wolfe-limoilou-8e.jpg">
+  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/pente-douce-salome.jpgg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -36,7 +36,7 @@ https://templatemo.com/tm-520-highway
   <meta property="twitter:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
   <meta property="twitter:image"
-    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/wolfe-limoilou-8e.jpg">
+    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/pente-douce-salome.jpg">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
