correct file typo social preview

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-520-highway
   <meta property="og:title" content="Quebec City open air art gallery">
   <meta property="og:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
-  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/pente-douce-salome.jpgg">
+  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/pente-douce-salome.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
