new images parking Gagne et freres

--- a/index.html
+++ b/index.html
@@ -78,6 +78,58 @@ https://templatemo.com/tm-520-highway
   </div>
   <div class="full-screen-portfolio" id="portfolio">
     <div class="container-fluid">
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/gagne-1.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>Gagné et frères<em>parking 1</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/gagne-1.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/gagne-2.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>Gagné et frères<em>parking 2</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/gagne-2.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/gagne-3.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>Gagné et frères<em>parking 3</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/gagne-3.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
 
       <div class="col-md-4 col-sm-6">
         <div class="portfolio-item">
