adding google analytics sorry

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-520-highway
   <meta property="og:title" content="Quebec City open air art gallery">
   <meta property="og:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
-  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/pente-douce-salome.jpg">
+  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/smoking_midget.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -36,7 +36,7 @@ https://templatemo.com/tm-520-highway
   <meta property="twitter:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
   <meta property="twitter:image"
-    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/pente-douce-salome.jpg">
+    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/smoking_midget.jpg">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
@@ -49,6 +49,16 @@ https://templatemo.com/tm-520-highway
   <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N6D33ZW7BV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N6D33ZW7BV');
+</script>
 </head>
 
 <body>
@@ -78,6 +88,78 @@ https://templatemo.com/tm-520-highway
   </div>
   <div class="full-screen-portfolio" id="portfolio">
     <div class="container-fluid">
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/aztek.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>is that the front of the shed?<em> who knows...</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/aztek.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/dargenson.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>Behind this shed<em> on d'Argenson</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/dargenson.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/hermine.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>side of this shed<em> on Hermine</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/hermine.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/smoking_midget.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>existential midgets<em> smoking</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/smoking_midget.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
       <div class="col-md-4 col-sm-6">
         <div class="portfolio-item">
           <a href="img-wall-art-qc-city/gagne-1.jpg" data-lightbox="image-1">
