--- a/index.html
+++ b/index.html
@@ -88,6 +88,333 @@ https://templatemo.com/tm-520-highway
   </div>
   <div class="full-screen-portfolio" id="portfolio">
     <div class="container-fluid">
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/visual_noise.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>annuit<em> ceptis</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/visual_noise.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/rhino.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>pogger<em>!</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/rhino.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/reinicke_hildie.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>fox it<em> till you make it</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/reinicke_hildie.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/patriote_antifa.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>un peuple sans<em> histoire?</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/patriote_antifa.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/old_folks.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>they lived<em> here</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/old_folks.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/moteur_fucker.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>elegant<em> engine</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/moteur_fucker.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/hand.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>hand<em> makes it clear</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/hand.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/gorilla.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>gorilla<em> simple as</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/gorilla.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>  
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/gonzo.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>gonzo<em> simple as</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/gonzo.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/fall_crows.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>fall over<em> Quebec City</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/fall_crows.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/ex_machina.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>the devil is<em> in ze box</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/ex_machina.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/elephant.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>genormous<em> no cap</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/elephant.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/cycling_bear.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>ecological<em> transportation</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/cycling_bear.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/castor_antifa.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>i don't give a<em> dam!</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/castor_antifa.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/ca_suffit.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>no<em> surrender!</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/ca_suffit.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/big_cat.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>feline<em> or die trying</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/big_cat.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/anime_mayhem.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>pure girl<em> stalked by a wolfe</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/anime_mayhem.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="img-wall-art-qc-city/alphabet.jpg" data-lightbox="image-1">
+            <div class="thumb">
+              <div class="hover-effect">
+                <div class="hover-content">
+                  <h1>to double your income?<em>triple your learning</em></h1>
+                  <p></p>
+                </div>
+              </div>
+              <div class="image">
+                <img src="img-wall-art-qc-city/alphabet.jpg" />
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+
       <div class="col-md-4 col-sm-6">
         <div class="portfolio-item">
           <a href="img-wall-art-qc-city/aztek.jpg" data-lightbox="image-1">
