update social media card

--- a/index.html
+++ b/index.html
@@ -17,26 +17,27 @@ https://templatemo.com/tm-520-highway
 
   <!-- Primary Meta Tags -->
   <title>Quebec City open air art gallery</title>
-  <meta name="title" content="Quebec City open air art gallery">
+  <meta name="title" content="Quebec City open air art gallery -  look around and find beauty">
   <meta name="description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://quebec-art.freshdatasource.com/">
-  <meta property="og:title" content="Quebec City open air art gallery">
+  <meta property="og:title" content="Quebec City open air art gallery -  look around and find beauty">
   <meta property="og:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
-  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/smoking_midget.jpg">
+  <meta property="og:image" content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/du-pont-des.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://quebec-art.freshdatasource.com/">
-  <meta property="twitter:title" content="Quebec City open air art gallery">
+  <meta property="twitter:title" content="Quebec City open air art gallery -
+  look around and find beauty">
   <meta property="twitter:description"
     content="Quebec city wall art and graffiti are everywhere you don't look. Expressing joy and sorrow - they are as much the soul of the city as tourist attractions and shopping malls.">
   <meta property="twitter:image"
-    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/smoking_midget.jpg">
+    content="https://quebec-art.freshdatasource.com/img-wall-art-qc-city/du-pont-des.jpg">
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
